# protobuf.dart

./: .gitignore  .status  .travis.yml  CHANGELOG.md  Makefile  README.md  analysis_options.yaml  build.yaml  codereview.settings  mono_pkg.yaml  mono_repo.yaml  prepend.dart  pubspec.yaml
protobuf/: BUILD.bazel  CHANGELOG.md  README.md  analysis_options.yaml  build_wkts.sh  mono_pkg.yaml  pubspec.yaml
protobuf/benchmarks/: README.md  benchmark_js.dart  benchmark_vm.dart  common.dart  compile-js.sh  compile-protos.sh  d8.dart
protobuf/lib/: meta.dart  mixins_meta.dart  protobuf.dart  well_known_types.dart
protobuf/test/: builder_info_test.dart  codec_test.dart  coded_buffer_reader_test.dart  dummy_field_test.dart  event_test.dart  json_test.dart  json_vm_test.dart  list_equality_test.dart  list_test.dart  map_mixin_test.dart  message_test.dart  mock_util.dart  permissive_compare_test.dart  readonly_message_test.dart  reserved_names_test.dart  test_util.dart
protoc_plugin/: .gitignore  .pubignore  BUILD.bazel  CHANGELOG.md  Makefile  README.md  analysis_options.yaml  dart_test.yaml  mono_pkg.yaml  pubspec.yaml  pubspec_overrides.yaml
protoc_plugin/benchmark/: props_browser.dart  props_vm.dart  readjson_browser.dart
protoc_plugin/legacy_tests/: generated_message_test.dart
protoc_plugin/lib/: base_type.dart  bazel.dart  client_generator.dart  code_generator.dart  const_generator.dart  enum_generator.dart  extension_generator.dart  file_generator.dart  generate.dart  grpc_generator.dart  indenting_writer.dart  linker.dart  message_generator.dart  mixins.dart  (+8 more)
(+634 files in other folders)
