package(default_visibility = ["//:__subpackages__"])

load(
    "@io_bazel_rules_dart//dart/build_rules:core.bzl", 
    "dart_library",
)

dart_library(
    name = "protobuf",
    srcs = glob([
        "lib/**",
    ]),
    pub_pkg_name = "protobuf",
    deps = [
        "@vendor_fixnum//:fixnum",
    ],
)