package(default_visibility = ["//:__subpackages__"])

load(
    "@io_bazel_rules_dart//dart/build_rules:core.bzl", 
    "dart_library",
)

load(
    "@io_bazel_rules_dart//dart/build_rules:vm.bzl", 
    "dart_vm_binary",
    "dart_vm_snapshot",
)

dart_library(
    name = "protoc_plugin_lib",
    srcs = glob([
        "lib/**",
    ]),
    pub_pkg_name = "protoc_plugin",
    deps = [
        "@vendor_fixnum//:fixnum",
        "@vendor_path//:path",
        "@vendor_dart_style//:dart_style",
        "//protobuf/protobuf:protobuf",
    ],
)

dart_vm_binary(
    name = "protoc_plugin_bin",
    srcs = glob([
        "bin/protoc_plugin.dart",
    ]),
    script_file = "bin/protoc_plugin.dart",
    deps = [
        ":protoc_plugin_lib",
    ]
)